@@ -1,3 +1,7 @@
+2007-01-30  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/ScratchPad.py: Fix crash in GrampsType escaping;
+	Additional tooltips for more objects.
+
 2007-01-29  Benny Malengier  <benny.malengier@ugent.be>
 	* src/DataViews/_PersonView.py: numlock handling
 	* src/PageView.py: numlock handling
